--- a/MENU.html
+++ b/MENU.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VERNER GROUP</span>
+                        <span>VELNER GROUP</span>
                         <h3>CATALOGO DE MASCARILLAS</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
                     </div>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VERNER GROUP</span>
+                        <span>VELNER GROUP</span>
                         <h3>CATALOGO DE GUANTES</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
                     </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VERNER GROUP</span>
+                        <span>VELNER GROUP</span>
                         <h3>CATALOGO DE CABEZALES</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
                     </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VERNER GROUP</span>
+                        <span>VELNER GROUP</span>
                         <h3>CATALOGO DE BANDOLAS</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
                     </div>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VERNER GROUP</span>
+                        <span>VELNER GROUP</span>
                         <h3>CATALOGO DE LENTES</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
                     </div>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VERNER GROUP</span>
+                        <span>VELNER GROUP</span>
                         <h3>CATALOGO DE SEÑALAMIENTOS Y ARTICULOS</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
                     </div>
