--- a/MENU.html
+++ b/MENU.html
@@ -141,6 +141,26 @@
                 <br>
                 <a href="SEÑALAMIENTOS.html" class="btn-1">IR AL CATALOGO</a>
             </div>
+	            <div class="swiper-slide">
+                <div class="icons">
+                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <img src="images/logo.png" alt="">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="product-s">
+                    <div class="product-text">
+                        <span>VELNER GROUP</span>
+                        <h3>CATALOGO DE JARCIERÍA Y LIMPIEZA</h3>
+                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                    </div>
+                    <div class="product-i">
+                        <img src="https://lirp.cdn-website.com/33b76f8b/dms3rep/multi/opt/img1-359w.png" alt="">
+                    </div>
+                </div>
+                <br>
+                <br>
+                <a href="JARCIERIA.html" class="btn-1">IR AL CATALOGO</a>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
