--- a/MENU.html
+++ b/MENU.html
@@ -40,6 +40,25 @@
                 <br>
                 <br>
                 <a href="MASCARILLAS.html" class="btn-1">IR AL CATALOGO</a>
+		    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
@@ -60,6 +79,25 @@
                 <br>
                 <br>
                 <a href="GUANTES.html" class="btn-1">IR AL CATALOGO</a>
+		    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
@@ -80,6 +118,25 @@
                 <br>
                 <br>
                 <a href="CABEZALES.html" class="btn-1">IR AL CATALOGO</a>
+		    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
@@ -100,6 +157,25 @@
                 <br>
                 <br>
                 <a href="BANDOLAS.html" class="btn-1">IR AL CATALOGO</a>
+		    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
@@ -120,6 +196,25 @@
                 <br>
                 <br>
                 <a href="LENTES.html" class="btn-1">IR AL CATALOGO</a>
+		    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="swiper-slide">
                 <div class="icons">
@@ -140,6 +235,25 @@
                 <br>
                 <br>
                 <a href="SEÑALAMIENTOS.html" class="btn-1">IR AL CATALOGO</a>
+		    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
 	            <div class="swiper-slide">
                 <div class="icons">
@@ -160,6 +274,25 @@
                 <br>
                 <br>
                 <a href="JARCIERIA.html" class="btn-1">IR AL CATALOGO</a>
+			    <table class="product-text1" width="80%" cellspacing>
+                    <tr>
+                        <td>
+                            <section class="buttons">
+                                <a href="https://www.facebook.com/VELNERGROUP" class="fa-brands fa-facebook"></a>
+                              </section>
+                        </td>
+                        <td>
+                            <section class="buttons">
+                                <a class="fa-brands fa-microsoft"></a>
+                              </section>
+                        </td>
+                        <td>
+                                <section class="buttons">
+                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                              </section>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
