--- a/MENU.html
+++ b/MENU.html
@@ -55,7 +55,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
@@ -95,7 +95,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
@@ -135,7 +135,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
@@ -175,7 +175,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
@@ -215,7 +215,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
@@ -255,7 +255,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
@@ -295,7 +295,7 @@
                         </td>
                         <td>
                                 <section class="buttons">
-                                    <a href="" class="fa-brands fa-whatsapp"></a>
+                                    <a href="https://wa.me/message/KIJDZKC2ZKSPD1" class="fa-brands fa-whatsapp"></a>
                               </section>
                         </td>
                     </tr>
