--- a/MENU.html
+++ b/MENU.html
@@ -77,16 +77,14 @@
                 <div class="product-s">
                     <div class="product-text">
                         <div class="carrucel">
-				<span style="--i:1"><img src="mascarillas/masca.png" alt=""></span>
-				<span style="--i:2"><img src="mascarillas/1.png" alt=""></span>
-				<span style="--i:3"><img src="mascarillas/2.png" alt=""></span>
-				<span style="--i:4"><img src="mascarillas/3.png" alt=""></span>
-				<span style="--i:5"><img src="mascarillas/4.png" alt=""></span>
-				<span style="--i:6"><img src="mascarillas/5.png" alt=""></span>
-				<span style="--i:1"><img src="mascarillas/6" alt=""></span>
-				<span style="--i:1"><img src="mascarillas/https://www.dastecsrl.com.ar/uploads/productos/scott-safety/airPak2.png" alt=""></span>
-				<span style="--i:1"><img src="mascarillas/https://cdn11.bigcommerce.com/s-lirzegtuuj/images/stencil/1280x1280/products/6211/11251/SRER002-0__77809.1695764069.png?c=1?imbypass=on" alt=""></span>
-				
+				<span style="--i:1"><img src="guantes/guan.png" alt=""></span>
+				<span style="--i:2"><img src="guantes/1.png" alt=""></span>
+				<span style="--i:3"><img src="guantes/2.png" alt=""></span>
+				<span style="--i:4"><img src="guantes/3.png" alt=""></span>
+				<span style="--i:5"><img src="guantes/4.png" alt=""></span>
+				<span style="--i:6"><img src="guantes/5.png" alt=""></span>
+				<span style="--i:7"><img src="guantes/6.png" alt=""></span>
+				<span style="--i:8"><img src="guantes/7.png" alt=""></span>
 			</div>
                         <h3>CATALOGO DE GUANTES</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
