--- a/MENU.html
+++ b/MENU.html
@@ -215,14 +215,14 @@
                 <div class="product-s">
                     <div class="product-text">
                         <div class="carrucel">
-				<span style="--i:1"<img src="cofias/1.png" alt=""></span>
-				<span style="--i:2"<img src="cofias/2.png" alt=""></span>
-				<span style="--i:3"<img src="cofias/3.png" alt=""></span>
-				<span style="--i:4"<img src="cofias/4.png" alt=""></span>
-				<span style="--i:5"<img src="cofias/5.png" alt=""></span>
-				<span style="--i:6"<img src="cofias/6.png" alt=""></span>
-				<span style="--i:7"<img src="cofias/7.png" alt=""></span>
-				<span style="--i:8"<img src="cofias/8.png" alt=""></span>
+				<span style="--i:1"><img src="cofias/1.png" alt=""></span>
+				<span style="--i:2"><img src="cofias/2.png" alt=""></span>
+				<span style="--i:3"><img src="cofias/3.png" alt=""></span>
+				<span style="--i:4"><img src="cofias/4.png" alt=""></span>
+				<span style="--i:5"><img src="cofias/5.png" alt=""></span>
+				<span style="--i:6"><img src="cofias/6.png" alt=""></span>
+				<span style="--i:7"><img src="cofias/7.png" alt=""></span>
+				<span style="--i:8"><img src="cofias/8.png" alt=""></span>
 			</div>
                         <h3>CATALOGO DE LENTES</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
