--- a/MENU.html
+++ b/MENU.html
@@ -260,12 +260,18 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VELNER GROUP</span>
+                        <div class="carrucel">
+				<span style="--i:1"><img src="señalamientos/1.png" alt=""></span>
+				<span style="--i:2"><img src="señalamientos/2.png" alt=""></span>
+				<span style="--i:3"><img src="señalamientos/3.png" alt=""></span>
+				<span style="--i:4"><img src="señalamientos/4.png" alt=""></span>
+				<span style="--i:5"><img src="señalamientos/5.png" alt=""></span>
+				<span style="--i:6"><img src="señalamientos/6.png" alt=""></span>
+				<span style="--i:7"><img src="señalamientos/7.png" alt=""></span>
+				<span style="--i:8"><img src="señalamientos/8.png" alt=""></span>
+			</div>
                         <h3>CATALOGO DE SEÑALAMIENTOS Y ARTICULOS</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
-                    </div>
-                    <div class="product-i">
-                        <img src="señalamientos/16.png" alt="">
                     </div>
                 </div>
                 <br>
@@ -300,12 +306,18 @@
                 </div>
                 <div class="product-s">
                     <div class="product-text">
-                        <span>VELNER GROUP</span>
+                         <div class="carrucel">
+				<span style="--i:1"><img src="limpieza/pngwing.com.png" alt=""></span>
+				<span style="--i:2"><img src="limpieza/1.png" alt=""></span>
+				 <span style="--i:3"><img src="limpieza/2.png" alt=""></span>
+				 <span style="--i:4"><img src="limpieza/3.png" alt=""></span>
+				 <span style="--i:5"><img src="limpieza/4.png" alt=""></span>
+				 <span style="--i:6"><img src="limpieza/5.png" alt=""></span>
+				 <span style="--i:7"><img src="limpieza/6.png" alt=""></span>
+				 <span style="--i:8"><img src="limpieza/7.png" alt=""></span>
+			</div>
                         <h3>CATALOGO DE JARCIERÍA Y LIMPIEZA</h3>
                         <p>EQUIPO DE PROTECCION PERSONAL</p>
-                    </div>
-                    <div class="product-i">
-                        <img src="https://lirp.cdn-website.com/33b76f8b/dms3rep/multi/opt/img1-359w.png" alt="">
                     </div>
                 </div>
                 <br>
