--- a/INICIO.html
+++ b/INICIO.html
@@ -15,7 +15,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="velnergroup.github.io-main/images/logo.png" alt="" class="logo">
+            <img src="images/logo.png" alt="" class="logo">
         </a>
         <ul>
             <li><a class="active" href="#">Inicio</a></li>
