--- a/MENU.html
+++ b/MENU.html
@@ -23,9 +23,9 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -70,9 +70,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -116,9 +116,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -162,9 +162,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -208,9 +208,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -254,9 +254,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -300,9 +300,9 @@
             </div>
 	            <div class="swiper-slide">
                 <div class="icons">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <a class="fa-regular fa-heart"></a>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
