--- a/MENU.html
+++ b/MENU.html
@@ -23,9 +23,9 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -69,9 +69,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -114,9 +114,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -159,9 +159,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                    <a href="INICIO.html class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -204,9 +204,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -249,9 +249,9 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -294,9 +294,9 @@
             </div>
 	            <div class="swiper-slide">
                 <div class="icons">
-                    <a href="MASCARILLAS.html class="fa-solid fa-circle-arrow-left"></a>
+                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <a class="fa-regular fa-heart"></a>
+                    <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
