--- a/MENU.html
+++ b/MENU.html
@@ -159,7 +159,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="INICIO.html class="fa-solid fa-circle-arrow-left"></a>
+                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
                     <i class="fa-regular fa-heart"></i>
                 </div>
