--- a/MENU.html
+++ b/MENU.html
@@ -23,9 +23,12 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
+                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -71,7 +74,10 @@
                 <div class="icons">
                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -116,7 +122,10 @@
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -161,7 +170,10 @@
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -204,9 +216,12 @@
             </div>
             <div class="swiper-slide">
                 <div class="icons">
-                    <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
+                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -251,7 +266,10 @@
                 <div class="icons">
                     <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
@@ -294,9 +312,12 @@
             </div>
 	            <div class="swiper-slide">
                 <div class="icons">
-                   <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
+                  <a href="INICIO.html" class="fa-solid fa-circle-arrow-left"></a>
                     <img src="images/logo.png" alt="">
-                    <i class="fa-regular fa-heart"></i>
+                    <label class="heart-checkbox">
+                        <input type="checkbox" />
+                        <i class="fa fa-heart"></i>
+                    </label>
                 </div>
                 <div class="product-s">
                     <div class="product-text">
