--- a/MENU.html
+++ b/MENU.html
@@ -43,12 +43,12 @@
 				<span style="--i:8"> <img src="https://cdn11.bigcommerce.com/s-lirzegtuuj/images/stencil/1280x1280/products/6211/11251/SRER002-0__77809.1695764069.png?c=1?imbypass=on" alt=""></span>
 					
 			</div>
-                        <h3>CATALOGO DE MASCARILLAS</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE MASCARILLAS</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="MASCARILLAS.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="MASCARILLAS.html" class="btn-1">IR AL CATÁLOGO</a>
 		    <br><br>
 		    <table class="product-text1" width="80%" cellspacing>
                     <tr>
@@ -91,12 +91,12 @@
 				<span style="--i:7"><img src="guantes/6.png" alt=""></span>
 				<span style="--i:8"><img src="guantes/7.png" alt=""></span>
 			</div>
-                        <h3>CATALOGO DE GUANTES</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE GUANTES</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="GUANTES.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="GUANTES.html" class="btn-1">IR AL CATÁLOGO</a>
 		    <br><br>
 		    <table class="product-text1" width="80%" cellspacing>
                     <tr>
@@ -139,12 +139,12 @@
 				<span style="--i:7"><img src="cabezales/7.png" alt=""></span>
 				<span style="--i:8"><img src="cabezales/2.png" alt=""></span>
 			</div>
-                        <h3>CATALOGO DE CABEZALES</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE CABEZALES</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="CABEZALES.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="CABEZALES.html" class="btn-1">IR AL CATÁLOGO</a>
 		    <br><br>
 		    <table class="product-text1" width="80%" cellspacing>
                     <tr>
@@ -187,12 +187,12 @@
 				<span style="--i:7"><img src="seguridad/7.png" alt=""></span>
 				<span style="--i:8"><img src="seguridad/8.png" alt=""></span>
 			</div>
-                        <h3>CATALOGO DE BANDOLAS</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE BANDOLAS</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="BANDOLAS.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="BANDOLAS.html" class="btn-1">IR AL CATÁLOGO</a>
 		    <br><br>
 		    <table class="product-text1" width="80%" cellspacing>
                     <tr>
@@ -235,12 +235,12 @@
 				<span style="--i:7"><img src="cofias/7.png" alt=""></span>
 				<span style="--i:8"><img src="cofias/8.png" alt=""></span>
 			</div>
-                        <h3>CATALOGO DE LENTES</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE LENTES</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="LENTES.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="LENTES.html" class="btn-1">IR AL CATÁLOGO</a>
 		    <br><br>
 		    <table class="product-text1" width="80%" cellspacing>
                     <tr>
@@ -283,12 +283,12 @@
 				<span style="--i:7"><img src="señalamientos/7.png" alt=""></span>
 				<span style="--i:8"><img src="señalamientos/8.png" alt=""></span>
 			</div>
-                        <h3>CATALOGO DE SEÑALAMIENTOS Y ARTICULOS</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE SEÑALAMIENTOS Y ARTÍCULOS</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="SEÑALAMIENTOS.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="SEÑALAMIENTOS.html" class="btn-1">IR AL CATÁLOGO</a>
 		    <br><br>
 		    <table class="product-text1" width="80%" cellspacing>
                     <tr>
@@ -331,12 +331,12 @@
 				 <span style="--i:7"><img src="limpieza/6.png" alt=""></span>
 				 <span style="--i:8"><img src="limpieza/7.png" alt=""></span>
 			</div>
-                        <h3>CATALOGO DE JARCIERÍA Y LIMPIEZA</h3>
-                        <p>EQUIPO DE PROTECCION PERSONAL</p>
+                        <h3>CATÁLOGO DE JARCIERÍA Y LIMPIEZA</h3>
+                        <p>EQUIPO DE PROTECCIÓN PERSONAL</p>
                     </div>
                 </div>
                 <br>
-                <a href="JARCIERIA.html" class="btn-1">IR AL CATALOGO</a>
+                <a href="JARCIERIA.html" class="btn-1">IR AL CATÁLOGO</a>
 			    <br><br>
 			    <table class="product-text1" width="80%" cellspacing>
                     <tr>
