--- a/Quienes.html
+++ b/Quienes.html
@@ -16,23 +16,23 @@
             <i class="fas fa-bars"></i>
         </label>
         <a href="#" class="enlace">
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="velnergroup.github.io-main/images/logo.png" alt="" class="logo">
         </a>
         <ul>
             <li><a href="INICIO.html">Inicio</a></li>
-            <li><a href="#">Contactanos</a></li>
+            <li><a href="#">Contáctanos</a></li>
             <li><a class="active" href="#">Quienes somos</a></li>
-            <li><a href="https://velnergroup.github.io/MENU.html">Catalogo</a></li>
+            <li><a href="https://velnergroup.github.io/MENU.html">Catálogo</a></li>
         </ul>
     </nav>
     <section>
         <div class="texto">
             <p>En VELNER GROUP lo más importante son nuestros clientes basado en innovación y procesos que nos permitan conocer y satisfacer sus necesidades. Por ello, ofrecemos a nuestros clientes el mejor servicio de distribución y comercialización de productos de seguridad personal, productos de limpieza y jarcería</p>
-            <h1>Mision:</h1>
+            <h1>Misión:</h1>
             <p>Somos un solido equipo de colaboradores, nos establecemos objetivos y metas de calidad retadora, lográndolas de forma exitosa gracias al capital humano comprometido, competente, capaz y dedicado con el que cuenta nuestra compañía.</p>
-            <h1>Vision:</h1>
+            <h1>Visión:</h1>
             <p>Ser una empresa de equipo de seguridad personal líder a nivel nacional, para así satisfacer las necesidades de nuestros clientes, ofreciendo calidad y servicio con un enfoque objetivo de apoyo en su seguridad. </p>
-            <h1>OBJETIVO:</h1>
+            <h1>Objetivo:</h1>
             <p>Proteger la vida y perseverar el bienestar y salud de los colaboradores, ofreciendo el equipo adecuado con los más altos estándares de seguridad.</p>
         </div>
         <video muted autoplay loop>
