--- a/Quienes.html
+++ b/Quienes.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velner Group</title>
-    <link rel="icon" href="images/logo.ico">
+    <title>Menú Responsive</title>
     <link rel="stylesheet" href="somos.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
